--- a/Relua.Script/Relua.Script.csproj
+++ b/Relua.Script/Relua.Script.csproj
@@ -32,22 +32,19 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="src\LuaVisitor.cs" />
-    <Compile Include="src\Lua.cs" />
-    <Compile Include="src\Runtime\ReluaRuntime.cs" />
-    <Compile Include="src\Runtime\TypeMetatables.cs" />
-    <Compile Include="src\Runtime\ASTFunctions.cs" />
-    <Compile Include="src\Runtime\LuaUtil.cs" />
-    <Compile Include="src\Runtime\RefTable.cs" />
-    <Compile Include="src\Exception.cs" />
+    <Compile Include="src\Environment.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="src\" />
-    <Folder Include="src\Runtime\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Relua\Relua.csproj">
       <Project>{47566D06-A688-4E97-83B4-BE04F254E304}</Project>
       <Name>Relua</Name>
+    </ProjectReference>
+    <ProjectReference Include="libs\XTRuntime\XTRuntime\XTRuntime.csproj">
+      <Project>{1B353B11-9108-4A90-8895-3E1CD2AA4339}</Project>
+      <Name>XTRuntime</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
